# agent

./: Cargo.toml
src/: disks.rs  main.rs  models.rs  processes.rs  sockets.rs  state.rs  transmitter.rs
src/cli/: main.rs  mod.rs
src/collectors/: disks.rs  memory.rs  meta.rs  mod.rs  networks.rs
