[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bincode = "1.3"
netstat2 = "0.11.2"
serde = { version = "1.0.228", features = ["derive"] }
sysinfo = "0.37.2"
tokio = { version = "1.48.0", features = ["full"] }

# Named pipe support on Windows
tokio-named-pipes = { version = "0.1", optional = true }

[target.'cfg(windows)'.dependencies]
tokio-named-pipes = "0.1"
